objects/Staff__c/Staff__c.object-meta.xml
<CustomObject>
    <description>This is Staff object.</description>
    <label>Staff</label>
    <nameField>
        <label>Staff Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staff</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>