objects/Staff__c/fields/Alias__c.field-meta.xml
<CustomField>
    <fullName>Alias__c</fullName>
    <label>Alias</label>
    <length>8</length>
    <type>Text</type>
</CustomField>