objects/Staff__c/fields/CommunityNickName__c.field-meta.xml
<CustomField>
    <fullName>CommunityNickName__c</fullName>
    <label>CommunityNickName</label>
    <length>40</length>
    <type>Text</type>
</CustomField>