objects/Staff__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <label>Email</label>
    <length>40</length>
    <type>Text</type>
</CustomField>