objects/Staff__c/fields/Email_Encoding__c.field-meta.xml
<CustomField>
    <fullName>Email_Encoding__c</fullName>
    <label>Email Encoding</label>
    <length>255</length>
    <type>Text</type>
</CustomField>