objects/Staff__c/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <label>Language</label>
    <length>60</length>
    <type>Text</type>
</CustomField>