objects/Staff__c/fields/Phone_1__c.field-meta.xml
<CustomField>
    <fullName>Phone_1__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>