objects/Staff__c/fields/User_Type__c.field-meta.xml
<CustomField>
    <fullName>User_Type__c</fullName>
    <label>User Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Licensed User</fullName>
            </value>
            <value>
                <fullName>Unlicensed Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>