objects/Staff__c/listViews/Licensed_User.listView-meta.xml
<ListView>
    <fullName>Licensed_User</fullName>
    <columns>NAME</columns>
    <columns>Username__c</columns>
    <columns>User_Type__c</columns>
    <columns>Active__c</columns>
    <columns>IsDeleted__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>User_Type__c</field>
        <operation>equals</operation>
        <value>Licensed User</value>
    </filters>
    <label>Licensed User</label>
    <language>en_US</language>
</ListView>